aws/SecurityGroups-eu-west-2.json
{
 "SecurityGroups": [
  {
   "Description": "default VPC security group", 
   "GroupId": "sg-e1f13988", 
   "GroupName": "default", 
   "IpPermissions": [
    {
     "IpProtocol": "-1", 
     "IpRanges": [], 
     "Ipv6Ranges": [], 
     "PrefixListIds": [], 
     "UserIdGroupPairs": [
      {
       "GroupId": "sg-e1f13988", 
       "UserId": "118292266645"
      }
     ]
    }
   ], 
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1", 
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ], 
     "Ipv6Ranges": [], 
     "PrefixListIds": [], 
     "UserIdGroupPairs": []
    }
   ], 
   "OwnerId": "118292266645", 
   "VpcId": "vpc-e618e38f"
  }
 ]
}
